option java_package = "com.kuaikai.game.hall.msg.pb";  
option java_outer_classname="CQuitDeskPB";  

package hall;

message CQuitDesk {	// 玩家请求退出牌桌

}
