option java_package = "com.kuaikai.game.hall.msg.pb";  
option java_outer_classname="SJoinDeskPB";  

package hall;

import "common/DeskUniq.proto";

message SJoinDesk {	// 回复玩家加入牌桌

	required common.DeskUniq uniq = 1;						// 牌桌唯一标识

}